Fixed articles with horizontal scroll

--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -49,7 +49,7 @@ li {
 }
 
 pre {
-	@apply px-2 py-2 mt-5 mb-5 bg-gray-200 whitespace-pre-wrap;
+	@apply px-2 py-2 mt-5 mb-5 bg-gray-200 whitespace-pre-wrap break-words;
 }
 
 img {
